# mcp-whisper

./: .firebaserc  .gitignore  README.md  firebase.json  pyproject.toml  server.py
functions/: package-lock.json  package.json  tsconfig.json
functions/src/: index.ts
