[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-whisper"
version = "0.1.0"
description = "MCP server for audio transcription via OpenAI Whisper API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "openai>=1.0.0",
]

[project.scripts]
mcp-whisper = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
